# notes-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
notes_analyzer/: cli.py  sync.py
tests/: test_notes_analyzer.py
