[project]
name = "notes-analyzer"
version = "0.1"
description = "Using smollm2 to ask questions of Bear notes"
readme = "README.md"
authors = [{name = "Kevin B. Ridgway"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "chromadb",
    "markdown",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/program247365/notes-analyzer"
Changelog = "https://github.com/program247365/notes-analyzer/releases"
Issues = "https://github.com/program247365/notes-analyzer/issues"
CI = "https://github.com/program247365/notes-analyzer/actions"

[project.scripts]
notes-analyzer = "notes_analyzer.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.2.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"